	* fixed an integer overflow bug occuring when built with gcc 4.1.x
	* fixed crasing bug when closing while checking a torrent
	* fixed bug causing a crash with a torrent with piece length 0
	* added an extension to the DHT network protocol to support the
	  exchange of nodes with IPv6 addresses.
	* modified the ip_filter api slightly to support IPv6
	* modified the api slightly to make sequenced download threshold
	  a per torrent-setting.
	* changed the address type to support IPv6
	* fixed bug in piece picker which would not behave as
	  expected with regard to sequenced download threshold.
	* fixed bug with file_progress() with files > 2 GB.
	* added --enable-examples option to configure script.
	* fixed problem with the resource distribution algorithm
	  (controlling e.g upload/download rates).
	* fixed incorrect asserts in storage related to torrents with
	  zero-sized files.
	* added support for trackerless torrents (with kademlia DHT).
	* support for torrents with the private flag set.
	* support for torrents containing bootstrap nodes for the
	  DHT network.
	* fixed problem with the configure script on FreeBSD.
	* limits the pipelining used on url-seeds.
	* fixed problem where the shutdown always would delay for
	  session_settings::stop_tracker_timeout seconds.
	* session::listen_on() won't reopen the socket in case the port and
	  interface is the same as the one currently in use.
	* added http proxy support for web seeds.
	* fixed problem where upload and download stats could become incorrect
	  in case of high cpu load.
	* added more clients to the identifiable list.
	* fixed fingerprint parser to cope with latest Mainline versions.

release 0.10

	* fixed a bug where the requested number of peers in a tracker request could
	  be too big.
	* fixed a bug where empty files were not created in full allocation mode.
	* fixed a bug in storage that would, in rare cases, fail to do a
	  complete check.